# xspress-detector

./: .gitignore  Dockerfile
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: _dist.yml  container.yml  cpp.yml  python.yml
.workflows/: container.yml
cpp/control/src/: LibXspressSimulator.cpp  LibXspressWrapper.cpp  XspressController.cpp
cpp/data/frameProcessor/include/: XspressProcessPlugin.h
cpp/data/frameProcessor/src/: XspressProcessPlugin.cpp
deploy/: fp1.json  fp2.json  fr1.json  fr2.json  layout.kdl  odin_server.cfg  stControlServer.sh  stFrameReceiver1.sh  stFrameReceiver2.sh  stLiveViewMerge.sh  stMetaWriter.sh  stOdinServer.sh
python/: .pre-commit-config.yaml  pyproject.toml  setup.cfg
python/src/xspress_detector/control/: adapter.py  detector.py  fp_xspress_adapter.py  parameter_tree.py  xspress_api.py
