[metadata]
name = xspress-detector
description = A Python based odin-control interface library to the Xspress Detector
url = https://gitlab.diamond.ac.uk/controls/tools/xspress-detector
author = Omar Elamin
author_email = omar.elamin@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src

install_requires =
    odin-data[meta_writer] @ git+https://git@github.com/odin-detector/odin-data.git@1.12.0#subdirectory=python
    configparser

[options.extras_require]
# For development tests/docs
dev =
    ruff
    mypy
    flake8 <= 3.9.2
    flake8-isort
    pytest-cov
    pytest-asyncio
    sphinx-rtd-theme-github-versions
    pre-commit

[options.packages.find]
where=src

[options.entry_points]
# Include a command line script
console_scripts =
    xspress_control = odin.main:main
    xspress_meta_writer = odin_data.meta_writer.meta_writer_app:main
    xspress_live_merge = xspress_detector.control.live_view_merge:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=xspress_detector --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = error
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths =
    docs src tests

[coverage:run]
data_file = /tmp/xspress_detector.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/

[versioneer]
VCS = git
style = pep440
versionfile_source = src/xspress_detector/_version.py
versionfile_build = xspress_detector/_version.py
tag_prefix=

[tox:tox]
skipsdist=True

[testenv:{pre-commit,type-checking,tests,docs}]
# Don't create a virtualenv for the command, requires tox-direct plugin
direct = True
passenv = *
allowlist_externals =
    pytest
    pre-commit
    mypy
    sphinx-build
    sphinx-autobuild
commands =
    pre-commit: pre-commit run --show-diff-on-failure --files src/eiger_detector/data/*.py {posargs}
    # type-checking: mypy src tests {posargs}
    tests: pytest --cov=eiger_detector --cov-report term --cov-report xml:cov.xml {posargs}
    docs: sphinx-{posargs:build -EW --keep-going} -T ../docs ../build/html
